--- a/pkg/server/site/template/home.html
+++ b/pkg/server/site/template/home.html
@@ -60,6 +60,9 @@
         <label for="repos">Repos:</label><br>
         <input type="text" id="repos" name="repos" value="GoogleContainerTools/skaffold"><br>
 
+        <label for="branches">Repos:</label><br>
+        <input type="text" id="branches" name="branches" value="master"><br>
+
         <label for="users">Users:</label><br>
         <input type="text" id="users" name="users" value="MarlonGamez"><br>
 
